<resources>
    <string name="app_name">Deporte Galeana</string>

    <string name="inicio">Deporte Galeana</string>

    <string name="facebook_app_id">550602375588042</string>
    <string name="fb_login_protocol_scheme">fb550602375588042</string>

    <string name="Primera_Fuerza">Primera Fuerza</string>
    <string name="Posiciones">Posiciones</string>
    <string name="Partidos">Partidos</string>
    <string name="Goleadores">Goleadores</string>
    <string name="Noticias">Avisos</string>
    <string name="Ajustes">Ajustes</string>
    <string name="Acerca_de">Acerca de</string>

    <string name="Instruccion_Bienvenida"> Bienvenido a La aplicacion oficial de Deporte Galeana, aqui encontraras todo lo referente a las ligas
    del municipio en todas sus categorias.</string>
    <string name="Instruccion_TablaGeneral">Desde aquí podrás revisar la tabla general del torneo para saber en que lugar
    se encuentra tu equipo favorito, y que posibilidades tiene de calificar a la siguiente ronda del torneo.</string>
    <string name="Instruccion_Partidos">En esta sección encontrarás los partidos correspondientes a las proximas jornadas, así como los partidos
    finalizados de las jornadas anteriores.</string>
    <string name="Instruccion_Noticias">Aquí podrás visualizar todas las noticias de la liga a la que sigues, así como cuando un partido sea suspendido
        por motivos de la liga o ya sea por juegos de la selección entre otros motivos.</string>
    <string name="Instruccion_Goleadores">Esta aplicación tambien cuenta con un apartado para visualizar a los máximos rompe redes
        del torneo actual.</string>
    <string name="Instruccion_Ajustes">Ajusta la liga de la que más te interesa saber sus estadísticas y resultados en el apartado de ajustes, así
        como también puedes personalizar el fondo de la aplicación al que más sea de tu agrado.</string>
    <string name="Instruccion_Final">Así que no perdamos tiempo, comenzemos!!.</string>


    <string name="title_activity_contenedor_instrucciones">ContenedorInstruccionesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_contenedor_partidos">ContenedorPartidosActivity</string>
    <string name="tab_text_1">Próximos Partidos</string>
    <string name="tab_text_2">Partidos Finalizados</string>

    <string name="info_acercade">Esta aplicación está hecha con la finalidad de resolver el problema de la constante desinformación entre las personas involucradas en los juegos de futbol, ya que constantemente se producen cambios de horarios, lugares, equipos a competir, ligas, torneos etc. para así facilitar el manejo y la administración de los mismos.</string>
    <string name="cancel_login_facebook">El inicio de sesion con Facebook fué cancelado por el usuario</string>
    <string name="error_login_facebook">ocurrió un error al conectar con Facebook, revisa tu conexión a internet y vuelve a intentarlo</string>
    <string name="exito_reestablecer_password">Se envió un mensaje a tu correo electrónico. Sigue las instrucciones para reestablecer tu contraseña, si el correo no se encuentra en tu bandeja de entrada revisa la carpeta de correo no deseado. Una vez reestablecida vuelve a iniciar sesión.</string>
    <string name="firebase_error_login">Ocurrio un error al iniciar sesion, verifica tu conexión y vuelve a intentarlo</string>
    <string name="exito_registrarUsuario_password">Se envió un mensaje a tu correo electrónico. Sigue las instrucciones para verificar el correo electronico que acabas de proporcionar, si el correo no se encuentra en tu bandeja de entrada revisa la carpeta de correo no deseado. Una vez verificado el correo vuelve a iniciar sesión en la aplicación.</string>
</resources>
